@@ -67,12 +67,6 @@ remote.add_interface("ltn_interface",	{
 
 local function initialize(oldVersion, newVersion)
   --log("oldVersion: "..tostring(oldVersion)..", newVersion: "..tostring(newVersion))
-  ---- disable instant blueprint in creative mode
-  if game.active_mods["creative-mode"] then
-    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-input")
-    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-output")
-    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-lamp-control")
-  end
 
   ---- initialize logger
   global.messageBuffer = {}
@@ -229,10 +223,21 @@ local function registerEvents()
   -- always track built/removed train stops for duplicate name list
   script.on_event({defines.events.on_built_entity, defines.events.on_robot_built_entity}, OnEntityCreated)
   script.on_event({defines.events.on_pre_player_mined_item, defines.events.on_robot_pre_mined, defines.events.on_entity_died}, OnEntityRemoved)
+  script.on_event(defines.events.on_pre_surface_deleted, OnSurfaceRemoved)
+  if remote.interfaces["newgameplus"] then  -- custom event for nauvis reset
+    script.on_event(remote.call("newgameplus", "get_on_pre_surface_cleared_event"), OnSurfaceRemoved)
+  end
   if global.LogisticTrainStops and next(global.LogisticTrainStops) then
     script.on_event(defines.events.on_tick, OnTick)
     script.on_event(defines.events.on_train_changed_state, OnTrainStateChanged)
     script.on_event(defines.events.on_train_created, OnTrainCreated)
+  end  
+  
+  -- disable instant blueprint in creative mode
+  if remote.interfaces["creative-mode"] then
+    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-input")
+    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-output")
+    remote.call("creative-mode", "exclude_from_instant_blueprint", "logistic-train-stop-lamp-control")
   end
 end
 
@@ -785,8 +790,6 @@ end
 end
 
 -- remove stop references when deleting surfaces
-script.on_event(defines.events.on_pre_surface_deleted, OnSurfaceRemoved)
-
 function OnSurfaceRemoved(event)
   local surfaceID = event.surface_index or "nauvis"
   log("removing LTN stops on surface "..tostring(surfaceID) )
