@@ -3,6 +3,7 @@ Version: 1.9.1
 Date: 14.10.2018
   Bugfixes:
     - stops are removed before surface deletion #139
+    - creative mode blacklisting wasn't done every on_load
 ---------------------------------------------------------------------------------------------------
 Version: 1.9.0
 Date: 11.10.2018
